[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
ndarray = "0.15.6"
itertools = "0.10.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
